<resources>
    <string name="app_name">Fuck view</string>
    <string name="des">Block your unliked view!</string>
    <string name="service_des">A service for fuckview.</string>
    <string name="xposed_is_unabled">Xposed module is not enabled/updated.</string>
    <string name="enable_module">Enable this app in your Xposed Installer and reboot your phone.</string>
    <string name="OK">OK</string>
    <string name="captured">Captured</string>
    <string name="notification_title">fuckView(Click here to block)</string>
    <string name="no_file_ro_permission">emmm… Maybe there\'re not any permission management app,please manually give fuckView file read/write permission!</string>
    <string name="delete_selections">Delete Selections</string>
    <string name="share_selections">Share Selections</string>
    <string name="confirm">Confirm?</string>
    <string name="cancel">Cancel</string>
    <string name="no_share_app">No app which the rule can be shared to.</string>
    <string name="select_app_tip">Select App (Force stop that app beforehand，otherwise Fuckview can\'t work properly.)</string>
    <string name="parse_view">Parse</string>
    <string name="prev_step">Prev</string>
    <string name="next_step">Next</string>
    <string name="start_mark">Fuck it</string>
    <string name="start_mark_toast">Click view to mark it.</string>
    <string name="dont_mark_myself">Wow,do you want automutilation?What a bad boy…</string>
    <string name="module_des">Fuckview is used to fuck views.</string>
    <string name="no_app_list_permission">Maybe you forget giving Fuckview reading-application-list permission?</string>
    <string name="goto_app_detail">Goto app detail page</string>
    <string name="unsupport_of_package">Sorry,your device don\'t support the feature.</string>
    <string name="finish">Finish</string>
    <string name="step1_title">Welcome</string>
    <string name="welcome_word">Nice to see you!\nHave you ever seen \"Recommended App\",\"Try our new app today!\",or \"Be a VIP\" in some apps?Do you feel tired of them?\nFuckview is designed to solve these problems,you can block them with it.Make your apps cleaner now!\nMaybe you want a quick guide?:)</string>
    <string name="welcome_i_want_a_guide">Yeah,take me to the guide!</string>
    <string name="welcome_pass_guide">Not now!</string>
    <string name="conf_super_mode_name">Super Mode</string>
    <string name="conf_super_mode_des">It may cause slow runs of apps,but it\'s more powerful on ads.</string>
    <string name="conf_block">Blocking</string>
    <string name="conf_only_once_name">Each rule is only used once</string>
    <string name="conf_only_once_des">Each rule blocks only once and then disabled until the next time you open the application.</string>
    <string name="conf_import_rules_name">Import rules …</string>
    <string name="conf_import_rules_des">Click me to import new rules.</string>
    <string name="conf_mark">Marking</string>
    <string name="conf_force_root_name">Root mode in the floating window</string>
    <string name="conf_force_root_des">Force use root mode to parse in the floating window.</string>
    <string name="conf_no_list_name">Mode in the floating window</string>
    <string name="conf_no_list_on">Using layout click mode</string>
    <string name="conf_no_list_off">Using layout list mode</string>
    <string name="conf_standard_mode_name">Mode in the click</string>
    <string name="conf_standard_mode_on">Using normal mode</string>
    <string name="conf_standard_mode_off">Using compatible mode</string>
    <string name="conf_system_app_name">Show system apps</string>
    <string name="conf_system_app_des">Show system apps in list in order to fuck them.</string>
    <string name="conf_about">About</string>
    <string name="conf_developer">Developer</string>
    <string name="conf_donate_name">Donate</string>
    <string name="conf_donate_des">Thanks for @Pure White/@Rio </string>
    <string name="conf_qq_group_name">Join the QQ group</string>
    <string name="conf_qq_group_des">If you\'d like Line or Telegram,I\'m sorry that I can\'t create one because of the China National FireWall.</string>
    <string name="conf_other">Other</string>
    <string name="conf_bug_name">Take bug report</string>
    <string name="conf_bug_des">Start a bug report.</string>
    <string name="no_donate">Sorry,I don\'t have a Google Play account,so you can only donate in China.</string>
    <string name="import_rules">Enter rules below</string>
    <string name="conf_joke">Life spends %1$d min %2$d sec!</string>
    <string name="give_me_five_stars">Oh,five stars are best!</string>
    <string name="switch_position">Switch</string>
    <string name="close_popup">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="popup_mark_it">Fuck it!</string>
    <string name="rule_saved">New rule is saved.</string>
    <string name="parsing_view">Pasring...</string>
    <string name="parse_failed">Parse failed! Have you started the accessibility service?\nThen FORCE STOP the app and start it from fuckview AGAIN!</string>
    <string name="mark_tip">Long click to mark it,short click to show where it is.</string>
    <string name="cant_open_popup">Can\'t show a popup!Have you allowed Fuckview to show SYSTEM_ALERT_WINDOW?</string>
    <string name="cant_start_app">This app can\'t be started,did you disable it?</string>
    <string name="conf_guide">Quick Guide</string>
    <string name="conf_guide_des">Goto the quick guide again.</string>
    <string name="delete_item">Delete</string>
    <string name="conf_theme_name">Day Theme</string>
    <string name="conf_theme_des">Day and night</string>
    <string name="share">Share</string>
    <string name="disable_item">Disable it</string>
    <string name="enable_item">Enable it</string>
    <string name="class_name">Class</string>
    <string name="force_stop">Force Stop</string>
    <string name="click_to_save">[Click to save]</string>
    <string name="online_rules">Web Rules</string>
    <string name="online_rules_info">Online: %1$d rule(s)\nLocal: %2$d rule(s)</string>
    <string name="sync_rules">Sync</string>
    <string name="conf_enable_log_des">Enable log</string>
    <string name="conf_enable_log_name">Enable xposed log</string>
    <string name="conf_online_rules_name">Web Rules</string>
    <string name="conf_online_rules_des">Configure web rules</string>
    <string name="check_item_module_enabled">Module Enabled</string>
    <string name="check_item_floating_permission">Floating Window Permission</string>
    <string name="check_item_service_running">Accessibility Service Running</string>
    <string name="check_item_root">Rooted</string>
    <string name="conf_version">Version</string>
    <string name="multi_select">Multi-select Mode</string>
    <string name="conf_delete_all_rules_name">Delete all rules</string>
    <string name="conf_delete_all_rules_des">Clear all of your rules.</string>
    <string name="conf_enable_floating_window_name">Enable layout parsing</string>
    <string name="conf_enable_floating_window_des">[Unrecommended] Enable layout parsing in the floating window.</string>
    <string name="module_active">Fuckview is active.</string>
    <string name="module_not_active">Fuckview is not active.</string>
    <string name="force_closing">Force Closing …</string>
    <string name="finish_guide">Finish</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="start_app">Start app</string>
    <string name="checking">Self Checking…</string>
    <string name="check_item_method_invoked">(For debuger)Whether hooks could be successful</string>
    <string name="fuck">SHUT UP</string>
    <string name="thats_okay">All Right…</string>
    <string name="ask_for_rating">Feeling good?Why not give a star to this app for the poor developer who\'s using a old 5-inch computer with 32M memory and Pentium I CPU?</string>
    <string name="feel_bad">The developer feels very bad…</string>
    <string name="conf_keep_alive_name">Keep Alive</string>
    <string name="welcome_to_xposed">Open Xposed Installer</string>
    <string name="no_item">Nothing here,keep calm.</string>
    <string name="fuckview_lab">FuckView Lab</string>
    <string name="loading">Loading…</string>
    <string name="rules">%1$d rule(s)</string>
    <string name="save">Save</string>
    <string name="conf_icon_name">App Icon</string>
    <string name="conf_icon_des">Choose an icon</string>
    <string name="conf_icon_def" translatable="false">new</string>
    <string name="conf_keep_alive_des">Try to keep the module alive when marking in order to prevent the floating window from being killed.</string>
    <string name="no_alipay">It seems that you have not installed Alipay…\nDo you want to get my Alipay account's address?</string>
</resources>
