<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/welcome_image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_image_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/step1_title"
        android:textSize="@android:dimen/app_icon_size" />

    <TextView
        android:id="@+id/welcome_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:lineSpacingExtra="2sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/welcome_textView"
        android:text="@string/welcome_word" />

    <Button
        android:id="@+id/welcome_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_i_want_a_guide"
        android:layout_below="@id/welcome_textView2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/welcome_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pass_guide"
        android:layout_below="@id/welcome_guide"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>